--- a/public/game.html
+++ b/public/game.html
@@ -5,18 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="game.css" />
     <title>Co-op Blocks</title>
   </head>
   <body>
     <header>Co-op Blocks</header>
     <section>
-      <div class="create-lobby">
-        <button>Create Lobby (fake button)</button>
-        <br />
-        <a class="button" href="/lobby">Create Lobby</a>
-      </div>
+      <p>gg</p>
     </section>
     <footer></footer>
-    <script src="index.js"></script>
+    <script src="game.js"></script>
   </body>
 </html>
